Fixed the object instance counter to assign values to the ticket ID. Also added a word Turncate to my table description. Changed font and table borders to white for contrast.

--- a/Insectic/wwwroot/css/NewDashboard.css
+++ b/Insectic/wwwroot/css/NewDashboard.css
@@ -7,6 +7,7 @@
   max-height: 100%;
   max-width: 100%;
   display: flex;
+    padding-left: 10px;
   align-content: center;
   flex-direction: row;
   text-align: center;
@@ -18,16 +19,20 @@
   padding-top: 10px;
   overflow: auto;
   border-radius: 10px;
+    color: #f4f4f4;
 }
 th, tr, td{
   padding:5px;
-  border: black solid 2px;
+  border: #f4f4f4 solid 2px;
   text-align: center;
+}
+th {
+    width: 200px;
 }
 
 table {
   padding:5px;
-  border: black solid 2px;
+    border: #f4f4f4 solid 2px;
   overflow: auto;
   max-width: 100%;
   max-height: 90%;
